Update 'yagum6dik-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:127944d9b1b57f1c007368c6054a4b8632207557@sha256:bb5be693a2e250d906f3b5b60f6dc0b1b0102834fb409ee4e86f6d0926d26d8f

--- a/components/yagum6dik-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/yagum6dik-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: yagum6dik-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:127944d9b1b57f1c007368c6054a4b8632207557@sha256:bb5be693a2e250d906f3b5b60f6dc0b1b0102834fb409ee4e86f6d0926d26d8f
+          name: container-image
